[gd_scene load_steps=2 format=3 uid="uid://uf1uqs7cnhpv"]

[ext_resource type="Script" uid="uid://csfofhvefrnol" path="res://pause_menu/pause_menu.gd" id="1_5hbt6"]

[node name="pause_menu" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hbt6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 414.0
offset_bottom = 711.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 402.0
offset_bottom = 721.0
color = Color(0.27022192, 0.27022192, 0.2702219, 1)

[node name="title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 402.0
offset_bottom = 194.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center] pause
"

[node name="gamemodes" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -140.0
offset_right = 294.0
offset_bottom = 198.0
grow_vertical = 2
scale = Vector2(1.0167471, 1)

[node name="resume" type="Button" parent="gamemodes"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "resume"

[node name="menu" type="Button" parent="gamemodes"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "menu"

[node name="settings" type="Button" parent="gamemodes"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "settings"

[node name="quit" type="Button" parent="gamemodes"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "quit"

[connection signal="pressed" from="gamemodes/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="gamemodes/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="gamemodes/quit" to="." method="_on_quit_pressed"]
